unpackaged/main/default/objects/CreditMemo/CreditMemo.object-meta.xml
<CustomObject>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>