unpackaged/main/default/objects/CreditMemo/fields/Credit_Memo_Date__c.field-meta.xml
<CustomField>
    <fullName>Credit_Memo_Date__c</fullName>
    <label>Credit Memo Date</label>
    <type>Date</type>
</CustomField>