unpackaged/main/default/objects/CreditMemo/fields/DocumentNumber__c.field-meta.xml
<CustomField>
    <fullName>DocumentNumber__c</fullName>
    <label>Document Number</label>
    <length>32</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField> 