unpackaged/main/default/objects/CreditMemo/fields/PDFGenerationStatus__c.field-meta.xml
<CustomField>
    <fullName>PDFGenerationStatus__c</fullName>
    <label>PDF Generation Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Started</fullName>
                <default>true</default>
                <label>Not Started</label>
            </value>
            <value>
                <fullName>Generated</fullName>
            </value>
            <value>
                <fullName>Posted To BLOB Storage</fullName>
            </value>
            <value>
                <fullName>Not Applicable</fullName>
            </value>
            <value>
                <fullName>To Generate</fullName>
                <isActive>false</isActive>
                <label>To Generate</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>