unpackaged/main/default/objects/CreditMemo/fields/Refund__c.field-meta.xml
<CustomField>
    <fullName>Refund__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Refund</label>
    <referenceTo>Refund</referenceTo>
    <relationshipLabel>Credit Memos</relationshipLabel>
    <relationshipName>Credit_Memos</relationshipName>
    <type>Lookup</type>
</CustomField>