unpackaged/main/default/objects/CreditMemo/fields/ReturnOrder__c.field-meta.xml
<CustomField>
    <fullName>ReturnOrder__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Return Order</label>
    <referenceTo>ReturnOrder</referenceTo>
    <relationshipLabel>Credit Memos</relationshipLabel>
    <relationshipName>CreditMemos</relationshipName>
    <type>Lookup</type>
</CustomField>